Made some changes to the layout (fixed routes)

--- a/.localhistory/SMARTacademyMvc/Views/Shared/1495543947$_Layout.cshtml
+++ b/.localhistory/SMARTacademyMvc/Views/Shared/1495543947$_Layout.cshtml
@@ -22,8 +22,8 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Binding", "NoBinding", "Binding")</li>
-                    <li>@Html.ActionLink("Validation", "Index", "Validation")</li>
-                    <li>@Html.ActionLink("Action Filter", "Time", "ActionFilter")</li>
+                    <li>@Html.ActionLink("About", "About", "Home")</li>
+                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
