--- a/.localhistory/SMARTacademyMvc/Views/Binding/1495573813$BindingWithClassTypes.cshtml
+++ b/.localhistory/SMARTacademyMvc/Views/Binding/1495573813$BindingWithClassTypes.cshtml
@@ -36,7 +36,7 @@
         <div class="form-group">
             @Html.Label("Email:", new { @class = "col-md-2 control-label" })
             <div class="col-md-10">
-                @Html.TextBox("StudentContact.EmailS")
+                @Html.TextBox("StudentContact.Emai")
             </div>
         </div>
         <div class="form-group">
